--- a/index.html
+++ b/index.html
@@ -1,32 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
     <style>
-        html, body {
+        @font-face {
+            font-family: 'Valentine';
+
+            src: url('fonts/Valentine.ttf') format('truetype');
+        }
+
+        html,
+        body {
             height: 100%;
             margin: 0;
             padding: 0;
         }
+
         body {
-            background-image: url('background.jpg');
+            background-image: url('images/background.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
-            
+
             margin: 0;
             padding: 0;
             font-family: Arial, sans-serif;
             overflow: hidden;
+            font-family: 'Valentine';
         }
 
+        .title {
+            color: #eb172c;
+        }
+
+        .button {
+            border-color: #eb172c;
+        }
+
+        .button[disabled] {
+            background-color: white;
+            color: black;
+        }
     </style>
-    <title>Background Image Example</title>
+    <title>Be My Valentine?</title>
 </head>
+
 <body>
-    <!-- Your HTML content goes here -->
-    <h1>Hello, World!</h1>
-    <p>This is a sample page with a background image.</p>
+    <div class="d-flex justify-content-center mt-5">
+        <img class="cat img-fluid" src="images/cat.jpg" width="20%">
+    </div>
+
+    <h1 class="title text-center mt-5">Be my Valentine?</h1>
+
+    <div class="row mt-4">
+        <div class="col-3"></div>
+        <button id="yes" class="button col-3 mx-1">Yes!</button>
+        <button id="no" class="button col-3 mx-1" disabled>No..</button>
+        <div class="col-3"></div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
