--- a/index.html
+++ b/index.html
@@ -42,10 +42,6 @@
             border-color: #eb172c;
         }
 
-        .button[disabled] {
-            background-color: white;
-            color: black;
-        }
     </style>
     <title>Be My Valentine?</title>
 </head>
@@ -60,7 +56,7 @@
     <div class="row mt-4">
         <div class="col-3"></div>
         <button id="yes" class="button col-3 mx-1">Yes!</button>
-        <button id="no" class="button col-3 mx-1" disabled>No..</button>
+        <button id="no" class="button col-3 mx-1">No..</button>
         <div class="col-3"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
