--- a/index.html
+++ b/index.html
@@ -6,53 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
-    <style>
-        @font-face {
-            font-family: 'Valentine';
-
-            src: url('fonts/Valentine.ttf') format('truetype');
-        }
-
-        html,
-        body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            background-image: url('images/background.jpg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center center;
-
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            overflow: hidden;
-            font-family: 'Valentine';
-        }
-
-        .title {
-            color: #eb172c;
-        }
-
-        .button {
-            border-color: #eb172c;
-        }
-
-        .image-container {
-            height: 400px;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/styles.css">
+    <script src="./script/script.js"></script>
     <title>Be My Valentine?</title>
 </head>
 
 <body>
     <div class="d-flex justify-content-center mt-5 image-container">
-        <img class="cat img-fluid" src="images/cat.jpg" width="20%">
-        <img class="die img-fluid" src="images/die.jpg" width="20%" style="display:none;">
+        <img class="cat img-fluid" src="./images/cat.jpg" width="20%">
+        <img class="die img-fluid" src="./images/die.jpg" width="20%" style="display:none;">
         <img class="cat-happy img-fluid" src="images/cat-happy.gif" width="20%" style="display:none;">
     </div>
 
@@ -67,33 +29,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script>
-        function handleNoMouseOver() {
-            document.querySelector('.cat').style.display = 'none';
-            document.querySelector('.die').style.display = 'block';
-            document.getElementById('title').innerHTML = 'u sure bout that?';
-        }
-
-        function handleNoMouseOut() {
-            document.querySelector('.cat').style.display = 'block';
-            document.querySelector('.die').style.display = 'none';
-            document.getElementById('title').innerHTML = 'Be my Valentine?';
-        }
-
-        function handleYesClick() {
-            document.querySelector('.cat').style.display = 'none';
-            document.querySelector('.cat-happy').style.display = 'block';
-            document.getElementById('title').innerHTML = 'LOVE YOUUUUUU';
-            document.getElementById("yes").disabled = true;
-            document.getElementById("no").disabled = true;
-            document.getElementById('no').removeEventListener('mouseover', handleNoMouseOver);
-            document.getElementById('no').removeEventListener('mouseout', handleNoMouseOut);
-        }
-
-        document.getElementById('no').addEventListener('mouseover', handleNoMouseOver);
-        document.getElementById('no').addEventListener('mouseout', handleNoMouseOut);
-        document.getElementById('yes').addEventListener('click', handleYesClick);
-    </script>
 </body>
 
 </html>
